tardis-macros/tests/macros_tests/fail_cases/without_FromJsonQueryResult_custom_struct_test_fail.stderr
error[E0277]: the trait bound `tardis::db::sea_orm::Value: From<KeyValue>` is not satisfied
 --> tests/macros_tests/fail_cases/without_FromJsonQueryResult_custom_struct_test_fail.rs:4:35
  |
4 | #[derive(Clone, Debug, PartialEq, DeriveEntityModel, TardisCreateEntity, TardisEmptyBehavior, TardisEmptyRelation)]
  |                                   ^^^^^^^^^^^^^^^^^ the trait `From<KeyValue>` is not implemented for `tardis::db::sea_orm::Value`
  |
  = help: the following other types implement trait `From<T>`:
            <tardis::db::sea_orm::Value as From<&[u8]>>
            <tardis::db::sea_orm::Value as From<&std::string::String>>
            <tardis::db::sea_orm::Value as From<&str>>
            <tardis::db::sea_orm::Value as From<Cow<'_, str>>>
            <tardis::db::sea_orm::Value as From<JsonValue>>
            <tardis::db::sea_orm::Value as From<NaiveDate>>
            <tardis::db::sea_orm::Value as From<NaiveDateTime>>
            <tardis::db::sea_orm::Value as From<NaiveTime>>
          and $N others
  = note: required for `KeyValue` to implement `Into<tardis::db::sea_orm::Value>`
note: required by a bound in `ActiveValue`
 --> $CARGO/sea-orm-0.12.2/src/entity/active_model.rs
  |
  |     V: Into<Value>,
  |        ^^^^^^^^^^^ required by this bound in `ActiveValue`
  = note: this error originates in the derive macro `DeriveEntityModel` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `KeyValue: Nullable` is not satisfied
 --> tests/macros_tests/fail_cases/without_FromJsonQueryResult_custom_struct_test_fail.rs:4:35
  |
4 | #[derive(Clone, Debug, PartialEq, DeriveEntityModel, TardisCreateEntity, TardisEmptyBehavior, TardisEmptyRelation)]
  |                                   ^^^^^^^^^^^^^^^^^ the trait `Nullable` is not implemented for `KeyValue`
  |
  = help: the following other types implement trait `Nullable`:
            &str
            JsonValue
            NaiveDate
            NaiveDateTime
            NaiveTime
            Vec<T>
            Vec<u8>
            bool
          and $N others
  = note: required for `tardis::db::sea_orm::Value` to implement `From<std::option::Option<KeyValue>>`
  = note: required for `std::option::Option<KeyValue>` to implement `Into<tardis::db::sea_orm::Value>`
note: required by a bound in `ActiveValue`
 --> $CARGO/sea-orm-0.12.2/src/entity/active_model.rs
  |
  |     V: Into<Value>,
  |        ^^^^^^^^^^^ required by this bound in `ActiveValue`
  = note: this error originates in the derive macro `DeriveEntityModel` (in Nightly builds, run with -Z macro-backtrace for more info)
